# shared-bus

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  macros.rs  manager.rs  mutex.rs  proxies.rs  proxy.rs
tests/: adc.rs  i2c.rs  shared_bus.rs  spi.rs
tests/i2c_mock/: mod.rs
