[package]
name = "shared-bus"
version = "0.3.1"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

description = "Abstraction for sharing a bus between multiple devices."
repository = "https://github.com/Rahix/shared-bus"
documentation = "https://docs.rs/shared-bus"
readme = "README.md"
keywords = ["embedded-hal", "embedded-hal-impl", "i2c", "spi", "bus"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = "1.0.0"
once_cell = { version = "1.4.0", optional = true }
cortex-m = { version = "0.7.7", optional = true }
xtensa-lx = { version = "0.9.0", optional = true, features = ["spin"] }
spin = { version = "0.9.8", optional = true }
atomic-polyfill = { version = "1.0.1", optional = true }

embedded-hal-alpha = { package = "embedded-hal", version = "=1.0.0-alpha.9", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.9"

[features]
std = ["once_cell"]
xtensa = ["xtensa-lx", "spin"]
cortex-m = ["dep:cortex-m", "atomic-polyfill"]
eh-alpha = ["embedded-hal-alpha"]
